--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
+  "scripts": {
+    "prisma:seed": "tsx prisma/seed.ts"
+  },
   "devDependencies": {
-    "prisma": "^6.17.1"
+    "prisma": "^6.17.1",
+    "tsx": "^4.20.6"
   },
   "dependencies": {
     "@prisma/client": "^6.17.1"
