--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 DATABASE_URL="postgresql://swc:swc@localhost:5432/swc?schema=public"
+JWT_SECRET="dev-super-secret-0123456789abcdef9876543210"
+JWT_EXPIRES_IN="1h"
