Seller side integration

--- a/api/.env
+++ b/api/.env
@@ -1,8 +1,10 @@
 DATABASE_URL="postgresql://swc:swc@localhost:5432/swc?schema=public"
 JWT_SECRET="dev-super-secret-0123456789abcdef9876543210"
 JWT_EXPIRES_IN="1h"
-RESEND_API_KEY="123432dwds12e2wdw"
+RESEND_API_KEY="re_fjxMeLFB_H7Syxt3QgJ7zkrLnEsE5aZWa"
 EMAIL_FROM="support@thesmellywaterclub.com"
 RAZORPAY_KEY_ID="rzp_test_RXFTtUNIuqBb3E"
 RAZORPAY_KEY_SECRET="JR2lOFD18ToDVBEqieD56We0"
 RAZORPAY_WEBHOOK_SECRET=""
+DELHIVERY_API_URL="https://track.delhivery.com"
+DELHIVERY_API_TOKEN="a44531794a880ffe1aae673f1dfbd8478640ea22"
