--- a/api/.env.example
+++ b/api/.env.example
@@ -2,3 +2,12 @@ NODE_ENV=development
 PORT=4000
 CORS_ORIGINS=http://localhost:3000
 DATABASE_URL=postgresql://swc:swc@localhost:5432/swc?schema=public
+RAZORPAY_KEY_ID=your-razorpay-key-id
+RAZORPAY_KEY_SECRET=your-razorpay-key-secret
+RAZORPAY_WEBHOOK_SECRET=
+JWT_SECRET=your-jwt-secret-at-least-32-chars
+JWT_EXPIRES_IN=15m
+RESEND_API_KEY=your-resend-api-key
+EMAIL_FROM=support@thesmellywaterclub.com
+DELHIVERY_API_URL=https://track.delhivery.com
+DELHIVERY_API_TOKEN=your-delhivery-token
