--- a/api/package.json
+++ b/api/package.json
@@ -14,16 +14,24 @@
   },
   "dependencies": {
     "@prisma/client": "^6.17.1",
+    "@react-email/components": "^0.0.27",
+    "@react-email/render": "^0.0.13",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "resend": "^4.0.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/react": "^18.3.4",
+    "@types/react-dom": "^18.3.2",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.7.2",
     "nodemon": "^3.1.10",
