--- a/package.json
+++ b/package.json
@@ -6,10 +6,18 @@
     "prisma:seed": "tsx prisma/seed.ts"
   },
   "devDependencies": {
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
     "prisma": "^6.17.1",
     "tsx": "^4.20.6"
   },
   "dependencies": {
-    "@prisma/client": "^6.17.1"
+    "@prisma/client": "^6.17.1",
+    "@react-email/components": "^0.5.7",
+    "@react-email/render": "^1.4.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "resend": "^6.2.2",
+    "bcryptjs": "^3.0.2"
   }
 }
