adding more functionality related to shipments

--- a/api/.env
+++ b/api/.env
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql://swc:swc@localhost:5432/swc?schema=public"
+DATABASE_URL="postgresql://TheSmellyWaterClub:SMELLYWATER@swc-dev.c344gwco4kv9.ap-south-1.rds.amazonaws.com:5432/swc-db-dev"
 JWT_SECRET="dev-super-secret-0123456789abcdef9876543210"
 JWT_EXPIRES_IN="1h"
 RESEND_API_KEY="re_fjxMeLFB_H7Syxt3QgJ7zkrLnEsE5aZWa"
