--- a/api/.env.example
+++ b/api/.env.example
@@ -11,3 +11,8 @@ RESEND_API_KEY=your-resend-api-key
 EMAIL_FROM=support@thesmellywaterclub.com
 DELHIVERY_API_URL=https://track.delhivery.com
 DELHIVERY_API_TOKEN=your-delhivery-token
+AWS_ACCESS_KEY_ID=your-aws-access-key
+AWS_SECRET_ACCESS_KEY=your-aws-secret
+AWS_REGION=ap-south-1
+S3_BUCKET_NAME=swc-product-images-dev
+S3_PUBLIC_URL=https://d30u2u954xt29r.cloudfront.net
