--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="postgresql://swc:swc@localhost:5432/swc?schema=public"
+DATABASE_URL="postgresql://TheSmellyWaterClub:SMELLYWATER@swc-dev.c344gwco4kv9.ap-south-1.rds.amazonaws.com:5432/swc-db-dev"
